--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <script src="https://kit.fontawesome.com/687bfb846c.js" crossorigin="anonymous"></script>
 
-    <title>React App</title>
+    <title>My Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
